--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 </head>
 
 <body>
-    <h1>Sockeronsdag</h1>
+    <div>
+        <img src="sockeronsdag.png" />
+    </div>
   <!-- your content here... -->
   <!-- <script src="js/scripts.js"></script> -->
 </body>
